# goassist3

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLOUD-API-QUICKSTART.md  DEPLOYMENT-CHECKLIST.md  DOCKER-GUIDE.md  Dockerfile  PRD.md  README.md  TMF.md  TODO-IMPROVEMENTS.md  add_future_import.py  architecture.md  claude-progress.txt  docker-compose.dev.yml  docker-compose.yml  features.json  pyproject.toml  requirements-locked.txt  requirements.txt
.claude/: domain.json  settings.local.json
.claude/agents/: registry.json
.claude/commands/: auto.md  build-revenue-feature.md  learn.md
.claude/toolkit/: autonomy.py  learning.py
.github/workflows/: lint.yml  tests.yml
benchmarks/: KYUTAI_ANALYSIS.md  kyutai_tts_benchmark.py
docker/: .env.example  Dockerfile.goassist  docker-compose.goassist.yml  init-db.sql  prometheus.yml
docs/: Avatar-Realism-Checklist.md  BACKPRESSURE-RECOVERY.md  CODING-STANDARDS.md  Document-Authority-Map-v3.0.md  Implementation-v3.0.md  MetaHuman-Setup.md  Ops-Runbook-v3.0.md  PRD-v3.0.md  Parallel-Dev-v3.0.md  TMF-v3.0-Addendum-A.md  TMF-v3.0.md
docs/rfcs/: TEMPLATE.md
examples/: START-VOICE-TEST.md
examples/web-client/: README.md  index.html
frontend/: index.html
scripts/: avatar_qa_runner.py  test_voice_pipeline.py
src/: __init__.py  exceptions.py  main.py
src/animation/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py  test_animation.py  test_asr_base.py  test_async_timeout.py  test_audio2face_engine.py  test_audio2face_grpc.py  test_audio_clock.py  test_auth.py  test_backpressure.py  test_blendshape_ws.py  test_cancellation.py  test_constants.py  test_context_rollover.py  test_csrf.py  test_datachannel_emitter.py  test_exceptions.py  test_grpc_client.py  test_health.py  test_heartbeat.py  test_integration_bargein.py  test_integration_session_flow.py  test_integration_webrtc.py  test_kyutai_tts.py  test_latency_regression.py  test_livelink.py  test_load_concurrent_sessions.py  test_logging.py  test_metrics.py  test_mock_llm.py  test_packetizer.py  test_pipeline.py  test_public_paths.py  test_ratelimit.py  test_scos.py  test_session.py  test_sessions_api.py  test_settings.py  test_silero_vad.py  test_state_machine.py  (+9 more)
(+73 files in other folders)
