[project]
name = "goassist"
version = "3.0.0"
description = "Speech-to-speech conversational agent with optional digital human avatar"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "GoAssist Team"}
]

dependencies = [
    # Core
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # WebRTC + Transport
    "aiortc>=1.6.0",
    "aioice>=0.9.0",

    # Audio Pipeline
    "silero-vad>=5.0.0",
    "deepgram-sdk>=3.0.0",
    "faster-whisper>=1.0.0",
    "numpy>=1.26.0",

    # LLM
    "openai>=1.10.0",
    "tiktoken>=0.5.0",

    # Animation
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",

    # Persistence
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",

    # Observability
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",

    # Utilities
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "aiortc.*",
    "silero_vad.*",
    "deepgram.*",
    "faster_whisper.*",
    "grpc.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
